# IRIS-2018

./: .gitignore  CMakeLists.txt  README.md
CSK/: CMakeLists.txt  CoordSystemKinect.cpp  CoordSystemKinect.hpp  Linear.hpp
IRIS-2017-code/algorithms/src/: Map.hpp  checkboard_navigation_module.h  communication.cpp  communication.hpp  data_structure.hpp  kinect_obstacle_module.cpp  mainCassiecpp  mainD.cpp  pp_mod_dave.cpp  tcpBasic.hpp  tcpCassieC++Receiver.cpp  tcpDaveC++Sender.cpp
IRIS-2017-code/joy/joystick/: test.cc
Path Planning/: Neural_Network.py  Training Program  Vec.h  car_animation.py  constant.h  draw_height_data.ipynb  dummy_height_data_generator.py  map.py  mapping.cpp  mapping.h
arduinocode/: IRIS_Motor.ino
arduinocode/Debug/: Debug.ino
arduinocode/IRIS_Motor/: IRIS_Motor.ino  pwm_actuator.cpp
arduinocode/IRIS_Motor/cassiecontrol/: cassiecontrol.ino
cmake/: Findlibfreenect.cmake
examples/: CMakeLists.txt  get_kinect_img.cpp  mapping_at_origin.cpp  pcl.cpp  pcl_3d_visualization.cpp
joy/joystick/: build-test.sh  controller_to_net.py  start_cassie.sh  start_dave.sh  start_joystick.sh  test.cc  test1  test2.cc
joy/xbox360script/: xbox_script.py
kinect/: CMakeLists.txt  README.md  kinectDevice.cpp  kinectDevice.h  makefile  test_main.cpp
kinect/mapping/: mapping.h
kinect/test2/: kinectDevice.cpp  kinectDevice.h  main.cpp
localization/distance-to-camera/: distance-to-camera-template.py  distance_to_camera.py  getblue.py
localization/src/: checkboard_navigation_module.cpp  claibinit_mod.h
localization/test_webcam/: CMakeLists.txt
mapping/: CMakeLists.txt  Vec.h  constant.h  kinect_pcl.cpp  kinect_pcl.h  mapping.cpp  mapping.h
path_planning/: TrainingProgram
path_planning/NeuralNet/: Neural_Network.py  graph.py
python_serial_controller/: serial_controller.py  start_all.sh  test_serial.py
rogers_tools/: car_animation.py  dummy_height_data_generator.py
talkietalkie/: ArrayTransfer.py  tcpCassie.py  tcpCassieC++.cpp  tcpCassieC++Receiver.cpp  tcpCassieSender  tcpDave.py  tcpDaveC++.cpp  tcpDaveReceiver
testNamedPipe/: Reader2.cpp  reader2  readme.txt  writer2
tools/rogers_tools/: car_animation.py  draw_height_data.ipynb
tools/testNamedPipe/: Writer2.cpp
tools/test_data/: Coordinates.txt  a.out  generate_coord.cpp
